Get around the issue of overflowing icons in search results header for Firefox
We want to allow text in header to wrap, but not icons. Unfortunately
Firefox doesn't wrap text properly in this case, which could cause
nowrap icons after to overflow.

--- a/share/static/css/elevator-light/collection.css
+++ b/share/static/css/elevator-light/collection.css
@@ -65,3 +65,24 @@ th.collection-as-table {
 th.collection-as-table span.title {
     white-space: normal;
 }
+
+/* When determining if text shall be wrapped, Firefox seems overlook the
+ * following nowrap icons, which could cause these icons to overflow. Here
+ * we intentionally add some space to the title box to get around this issue
+ * */
+
+@-moz-document url-prefix() {
+
+    th.collection-as-table span.title {
+        padding-right: 2em;
+    }
+
+    th.collection-as-table span.title + * {
+        margin-left: -2em;
+    }
+
+    /* no need extra space if there are no icons */
+    th.collection-as-table span.title:last-child {
+        padding-right: 0;
+    }
+}
